fix: remove api list elements crop on mobile

--- a/src/styles/2-modules/_api-list.scss
+++ b/src/styles/2-modules/_api-list.scss
@@ -181,6 +181,10 @@ aio-api-list {
     text-overflow: ellipsis;
     white-space: nowrap;
 
+    @media screen and (max-width: $phone-breakpoint) {
+      width: 100%;
+    }
+
     .symbol {
       margin-right: 8px;
     }
